--- a/UI-Layouts/Linear/src/main/res/layout/activity_main_layout_1.xml
+++ b/UI-Layouts/Linear/src/main/res/layout/activity_main_layout_1.xml
@@ -8,7 +8,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:orientation="vertical"
-    tools:context="co.edu.udea.computacionmovil.layouts.MainActivity">
+    tools:context="co.edu.udea.compumovil.linearlayout.MainActivity">
 
     <EditText
         android:layout_width="match_parent"
@@ -19,12 +19,14 @@
         android:layout_height="wrap_content"
         android:hint="@string/subject" />
     <EditText
+        android:id="@+id/message_textview_id"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
         android:gravity="top"
         android:hint="@string/message" />
     <Button
+        android:id="@+id/send_button_id"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:layout_gravity="right"
