--- a/UI-InputControls/AutoComplete/src/main/res/layout/activity_main.xml
+++ b/UI-InputControls/AutoComplete/src/main/res/layout/activity_main.xml
@@ -3,26 +3,26 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:orientation="vertical"
     tools:context="co.edu.udea.compumovil.autocomplete.MainActivity">
 
-    <EditText
-        android:layout_width="fill_parent"
+    <TextView
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/country_string"
-        android:textSize="24sp"
+        android:layout_marginLeft="5dp"
         android:inputType="text"
-        android:imeActionLabel="launch"/>
+        android:text="@string/country_string"
+        android:textSize="24sp" />
 
     <AutoCompleteTextView
         android:id="@+id/autocomplete_country"
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="5dp"
         android:hint="@string/enter_country_string"
-        android:textSize="24sp"/>
+        android:textSize="24sp" />
 </LinearLayout>
