--- a/UI-InputControls/Pickers/src/main/res/layout/activity_picker.xml
+++ b/UI-InputControls/Pickers/src/main/res/layout/activity_picker.xml
@@ -7,7 +7,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".PickerActivity">
+    tools:context="co.edu.udea.compumovil.uidatepicker.PickerActivity">
 
     <TextView
         android:id="@+id/timeDisplay"
@@ -44,5 +44,5 @@
         android:onClick="onClick"
         android:layout_below="@+id/dateDisplay"
         android:layout_centerHorizontal="true" />
-</RelativeLayout>
 
+</RelativeLayout>
