--- a/UI-InputControls/Spinner/src/main/res/layout/activity_main.xml
+++ b/UI-InputControls/Spinner/src/main/res/layout/activity_main.xml
@@ -11,18 +11,18 @@
 
     <TextView
         android:id="@+id/textview"
-        android:layout_marginTop="10dip"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="20dp"
+        android:layout_marginTop="10dip"
         android:text="Seleccione un color:"
-        android:textSize="24sp"/>
+        android:textSize="24sp" />
 
     <Spinner
         android:id="@+id/fruits_spinner"
-        android:layout_width="fill_parent"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:textSize="24sp"
         android:layout_below="@+id/textview"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_centerHorizontal="true"
+        android:textSize="24sp" />
 </RelativeLayout>
