Updating UI-InputControls

--- a/UI-InputControls/Spinner/src/main/res/layout/activity_main.xml
+++ b/UI-InputControls/Spinner/src/main/res/layout/activity_main.xml
@@ -15,7 +15,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
         android:layout_marginTop="10dip"
-        android:text="Seleccione un color:"
+        android:text="Seleccione una fruta:"
         android:textSize="24sp" />
 
     <Spinner
