--- a/Intents/SendEmail/src/main/res/layout/activity_main.xml
+++ b/Intents/SendEmail/src/main/res/layout/activity_main.xml
@@ -1,54 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="16dp"
+    android:orientation="vertical"
     tools:context=".MainActivity">
-
-    <TextView
-        android:id="@+id/tvTo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:text="@string/to"/>
 
     <EditText
         android:id="@+id/edtTo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/tvTo"
+        android:hint="@string/to"
         android:inputType="textEmailAddress"
         android:ems="10"/>
-
-    <TextView
-        android:id="@+id/tvSubject"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:layout_below="@+id/edtTo"
-        android:text="@string/subject"/>
 
     <EditText
         android:id="@+id/edtSubject"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/tvSubject"/>
-
-    <TextView
-        android:id="@+id/tvComposeEmail"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:layout_below="@id/edtSubject"
-        android:text="@string/compose_email"/>
+        android:hint="@string/subject" />
 
     <EditText
         android:id="@+id/edtComposeEmail"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/tvComposeEmail"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:hint="@string/compose_email"
         android:gravity="top"
-        android:lines="12" />
+        android:lines="14" />
 
-</RelativeLayout>
+</LinearLayout>
