--- a/Intents/SendEmail/src/main/res/menu/menu_main.xml
+++ b/Intents/SendEmail/src/main/res/menu/menu_main.xml
@@ -1,13 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:id="@+id/action_send"
-        android:orderInCategory="1"
+<menu
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+  >
+    <item
+        android:id="@+id/action_send"
         android:icon="@android:drawable/ic_menu_send"
-        android:showAsAction="always|withText"
-        android:title="Send" />
-    <item android:id="@+id/menu_exit"
-        android:title="Exit"
+        android:orderInCategory="1"
+        android:title="Send"
+        app:showAsAction="ifRoom" />
+    <item
+        android:id="@+id/menu_exit"
+        android:icon="@android:drawable/ic_menu_close_clear_cancel"
         android:orderInCategory="100"
-        android:showAsAction="ifRoom|withText"/>
-
+        android:visible="true"
+        android:title="Exit"
+        android:showAsAction="ifRoom|withText" />
 </menu>
