--- a/Authentication/app/src/main/res/layout/activity_main.xml
+++ b/Authentication/app/src/main/res/layout/activity_main.xml
@@ -8,27 +8,36 @@
 
     tools:context="co.edu.udea.compumovil.authentication.MainActivity">
 
-    <TextView
-        android:id="@+id/status"
-        style="@style/ThemeOverlay.MyTextDetail"
-        android:text="@string/signed_out" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="2"
+        android:gravity="center_horizontal|bottom">
 
-    <TextView
-        android:id="@+id/detail"
-        style="@style/ThemeOverlay.MyTextDetail"
-        tools:text="Firebase User ID: 123456789abc" />
+        <ImageView
+            android:id="@+id/photo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
 
-<!--    <Button
-        android:id="@+id/sign_out_button"
-        style="?android:textAppearanceSmall"
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="16dp"
-        android:background="@color/colorPrimaryDark"
-        android:onClick="onClick"
-        android:text="@string/signed_out"
-        android:textColor="@android:color/white"
-        android:textStyle="bold" />-->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="2"
+        android:orientation="vertical"
+        android:gravity="center_horizontal">
+
+        <TextView
+            android:id="@+id/field_user_name"
+            style="@style/ThemeOverlay.MyTextDetail"
+            android:text="Username: " />
+
+        <TextView
+            android:id="@+id/field_email"
+            style="@style/ThemeOverlay.MyTextDetail"
+            tools:text="Firebase User ID: 123456789abc" />
+    </LinearLayout>
+
+
 
 </LinearLayout>
