--- a/UI-Layouts/Table/src/main/res/layout/activity_table_layout.xml
+++ b/UI-Layouts/Table/src/main/res/layout/activity_table_layout.xml
@@ -146,6 +146,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:background="@color/colorPrimaryDark"
+            android:textColor="#fff"
             android:text="Ver otro ejemplo" />
     </TableRow>
 
