--- a/UI-MaterialDesign/RecyclerCardView/src/main/res/layout/card_person.xml
+++ b/UI-MaterialDesign/RecyclerCardView/src/main/res/layout/card_person.xml
@@ -1,18 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+<android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/card_view"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
-
-    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/card_view"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:elevation="@dimen/cardview_default_elevation"
-        android:paddingTop="@dimen/activity_horizontal_margin"
-        card_view:cardCornerRadius="8dp"
-        card_view:cardElevation="4dp"
-        card_view:cardUseCompatPadding="true">
+    android:layout_height="wrap_content"
+    android:elevation="@dimen/cardview_default_elevation"
+    android:paddingTop="@dimen/activity_horizontal_margin"
+    card_view:cardCornerRadius="8dp"
+    card_view:cardElevation="4dp"
+    card_view:cardUseCompatPadding="true">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -35,6 +31,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentTop="true"
+                android:textColor="@color/black"
                 android:layout_toEndOf="@id/person_photo"
                 android:layout_toRightOf="@id/person_photo"
                 android:hint="@string/card_name"
@@ -52,5 +49,4 @@
         </RelativeLayout>
 
     </android.support.v7.widget.CardView>
-</LinearLayout>
 
