--- a/Fragments/Communications/src/main/res/layout/fragment_a.xml
+++ b/Fragments/Communications/src/main/res/layout/fragment_a.xml
@@ -1,8 +1,8 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="co.edu.udea.compumovil.communications.FragmentA">
 
     <EditText
@@ -10,8 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="30dp"
-        android:hint="@string/write_your_name"
-        />
+        android:hint="@string/write_your_name" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/floating_button"
