--- a/Networking/1.Socket/src/main/res/layout/activity_main.xml
+++ b/Networking/1.Socket/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
     tools:context="co.edu.udea.compumovil.socket.MainActivity">
 
     <Button
-        android:id="@+id/button1"
+        android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/load_data_string"
@@ -24,7 +24,7 @@
         android:layout_height="wrap_content" >
 
         <TextView
-            android:id="@+id/textView1"
+            android:id="@+id/textView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="20sp"
